test/SemanticAnalysis/LifetimeMethods/InvalidStaticnessDestroy.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__destroy' should not be static
	static void __destroy() noexcept { }
}

// CHECK: 1 error generated.
